--- a/Operarius/src/index.html
+++ b/Operarius/src/index.html
@@ -9,6 +9,21 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+          apiKey: "AIzaSyAkJCUFuDBkBO3pKN6I7CwoJyhhfQYaZFw",
+          authDomain: "operarius-3f1cb.firebaseapp.com",
+          databaseURL: "https://operarius-3f1cb.firebaseio.com",
+          projectId: "operarius-3f1cb",
+          storageBucket: "operarius-3f1cb.appspot.com",
+          messagingSenderId: "680782784545",
+          appId: "1:680782784545:web:a0893c864505ee5f"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+      </script>
+
   <app-root></app-root>
 </body>
 </html>
