--- a/Operarius/src/public/index.html
+++ b/Operarius/src/public/index.html
@@ -47,6 +47,19 @@
             }
           });
         </script>
+        <script>
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : '1:680782784545:web:a0893c864505ee5f',
+              cookie     : true,
+              xfbml      : true,
+              version    : 'v3.3'
+            });
+              
+            FB.AppEvents.logPageView();   
+              
+          };
+          </script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -58,6 +71,5 @@
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
-    c
   </body>
 </html>
